# icicle-labrador

./: .gitignore  README.md  custom_cuda.md  run.sh
icicle/backend/cpu/include/: ntt_task.h
icicle/include/: custom_ntt_cpu_trace.h
src/: CMakeLists.txt  benchmarking.cpp  cuda_async_ops.h  cuda_memory_pool.h  custom_matmul_cuda.cu  custom_misc_ops_cuda.cu  custom_ntt_constants.h  custom_ntt_hardcoded.cu  custom_vec_ops_cuda.cu  example.cpp  matmul_selector.h  misc_ops_selector.h  ntt_selector.h  prover.cpp  shared.cpp  test_helpers.cpp  types.cpp  types.h  vec_ops_selector.h  verifier.cpp
